--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"gen-api": "npx @rtk-query/codegen-openapi src/gen/openapi-config.js"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^9.6.0",
+		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-tabs": "^1.1.3",
 		"@reduxjs/toolkit": "^2.6.1",
+		"@rtk-query/codegen-openapi": "^2.0.0",
 		"@tailwindcss/vite": "^4.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
