--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-## CONFIG
-VITE_BACKEND_URL="http://127.0.0.1:3658/m1/852670-833353-default"
+VITE_BASE_URL="https://bookie-api.icu"
+VITE_MOCK="false"
