--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"gen-api": "npx @rtk-query/codegen-openapi src/gen/openapi-config.js"
+		"gen-api-booking": "npx @rtk-query/codegen-openapi gen/booking.rtkq-gen.js",
+		"gen-api-profile": "npx @rtk-query/codegen-openapi gen/profile.rtkq-gen.js"
 	},
 	"dependencies": {
 		"@faker-js/faker": "^9.6.0",
+		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
 		"@radix-ui/react-label": "^2.1.2",
@@ -20,14 +22,17 @@
 		"@reduxjs/toolkit": "^2.6.1",
 		"@rtk-query/codegen-openapi": "^2.0.0",
 		"@tailwindcss/vite": "^4.1.1",
+		"async-mutex": "^0.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^3.6.0",
 		"lucide-react": "^0.487.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.56.1",
 		"react-redux": "^9.2.0",
 		"react-router": "^7.4.1",
+		"redux-persist": "^6.0.0",
 		"tailwind-merge": "^3.1.0",
 		"tailwindcss": "^4.1.1",
 		"tw-animate-css": "^1.2.5"
