--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
 		"redux-persist": "^6.0.0",
 		"tailwind-merge": "^3.1.0",
 		"tailwindcss": "^4.1.1",
-		"tw-animate-css": "^1.2.5"
+		"tw-animate-css": "^1.2.5",
+		"zod": "^3.24.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
