--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-collapsible": "^1.1.3",
+		"@radix-ui/react-dialog": "^1.1.11",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-select": "^2.1.6",
 		"@radix-ui/react-tabs": "^1.1.3",
